--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 
 
+
           <title>DinoBoss - Extreme video game development</title>
           <link href="MainStyle.css" rel="stylesheet" type="text/css">
           <meta content="Ed Kay" name="author">
@@ -30,51 +31,50 @@
           </script>
         </head>
         <body>
-          <br><br>
-          <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br>
+          <br><br><br>
+          <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br><br><br>
           <div style="height: 6px" align="center">
             <div class="container">
-          <h1>EXTREME VIDEO GAME DEVELOPMENT</h1>
+          <h1>EXTREME VIDEO GAME DEVELOPMENT<img src="Images/WebsiteLineBreak.png"></h1>
 <p>
 
-  DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.
+  <br>DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.
 <br>
 <br>
-  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth. Low poly ones of course because aint nobody got time for texture mapping in this joint.
-          <br><br>
-DinoBoss takes the U out of FUN because it didn’t need it anyway.</p><p><br></p>
-<h1>CURRENT PROJECTS</h1>
+  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth.</p><p><br><br></p>
+<h1>CURRENT PROJECTS<img src="Images/WebsiteLineBreak.png"></h1>
           <div align="center"> </div>
-The current project being lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
+<br>The current project being lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
 <h1></h1>
-          <a href="www.hanglinegame.com" title="Hang Line" target="_blank"><img src="Images/HangLinePromoShot.png" alt="Hang Line" onload="this.width/=2;this.onload=null;" title="Hang Line"></a>
+          <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank"><img src="Images/HangLinePromoShot.png" alt="Hang Line" onload="this.width/=2;this.onload=null;" title="Hang Line"></a>
           </div>
-<div class="container"> <br>Hang Line is an extreme-physics
+<div class="container"> <br><br>Hang Line is an extreme-physics
             climbing game where you swing up dangerous mountain peaks and avoid
             ending up in hospital from falling rocks, avalanches and angry
             goats.</div>
 <div class="container"><br></div>
-<div class="container">Check it out at <a href="www.hanglinegame.com" title="Hang Line" target="_blank">hangline.com</a>.</div>
+<div class="container">Check it out at <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank">hangline.com</a>.</div>
 <div class="container"><br>
 
 <p>
-          Coming soon for iPhone®, iPad® and Android®.</p></div>
-<div class="container"><br></div>
+          Coming soon for iPhone®, iPad® and Android®.</p>
+          <br><br>
+        </div>
 <div class="container">
-<h1>WHO IS DINOBOSS?</h1>
-<h3>ED KAY - FOUNDER</h3><img src="Images/ProfileImage.png"></div>
+<h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
+<h3><br>ED KAY - FOUNDER</h3><img src="Images/ProfileImage.png"></div>
 <div class="container"><br>A 15 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape the constant loop of shipping and layoffs that plagues AAA console development. And thus DinoBoss was born.</div>
 <div class="container"><br>
-<h3>FOLLOW DEVELOPMENT</h3>
+<h3>FOLLOW</h3>
 <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
 <img style="width: 64px; height: 64px;" alt="Ed on twitter" src="Images/twitter-128.png"></a>
 <br><br>
 <h3>GET IN TOUCH</h3>
-<a target="_top" title="Get in touch" href="www.hanglinegame.com/Contact.html">
-  Contact Form</a>
+<a target="_blank" title="Get in touch" href="http://www.hanglinegame.com/Contact.html">
+  Contact Form<br></a>
 
 
-<br><br><br>
+<br><br><img src="Images/WebsiteLineBreak.png"><br><br><br>
 <p style="font-size: small;">
 iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. and other countries. App Store is a service mark of Apple, Inc. Android is a trademark of Google Inc.</p>
 </div>
@@ -84,4 +84,5 @@ iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. a
 
 
 
-</body></html>
+
+</div></body></html>
