--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <body>
           <br><br><br>
           <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br><br><br>
-          <div style="height: 6px" align="center">
+
             <div class="container">
           <h1>EXTREME VIDEO GAME DEVELOPMENT<img src="Images/WebsiteLineBreak.png"></h1>
 <p>
@@ -78,11 +78,7 @@
 <p style="font-size: small;">
 iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. and other countries. App Store is a service mark of Apple, Inc. Android is a trademark of Google Inc.</p>
 </div>
+<br>
 
 
-
-
-
-
-
-</div></body></html>
+</body></html>
