fot size tweaks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </head>
         <body>
           <br><br><br>
-          <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br><br><br>
+          <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br><br>
 
             <div class="container">
           <h1>EXTREME VIDEO GAME DEVELOPMENT<img src="Images/WebsiteLineBreak.png"></h1>
