--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             ending up in hospital from falling rocks, avalanches and angry
             goats.</div>
 <div class="container"><br></div>
-<div class="container">Check it out at <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank">hangline.com</a>.</div>
+<div class="container">Check it out at <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank">www.hanglinegame.com</a>.</div>
 <div class="container"><br>
 
 <p>
