--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
           <meta name="twitter:title" content="DinoBoss">
           <meta name="twitter:description" content="DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.">
           <meta name="twitter:image" content="http://www.dinoboss.com/Images/HangLinePromoShot.png">
-          <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-99100663-1', 'auto');
-            ga('send', 'pageview');
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454354-1"></script>
+          <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-115454354-1');
           </script>
+          
         </head>
         <body>
           <br><br><br>
