--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html dir="ltr" lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8">
-          <meta name="msvalidate.01" content="3D472DB5EFBF972E5881224D2410BDEE" />
+
+          <meta name="msvalidate.01" content="3D472DB5EFBF972E5881224D2410BDEE">
           <title>DinoBoss - Extreme video game development</title>
           <link href="MainStyle.css" rel="stylesheet" type="text/css">
           <meta content="Ed Kay" name="author">
@@ -19,7 +20,7 @@
           <meta name="twitter:image" content="http://www.dinoboss.com/Images/HangLinePromoShot.png">
 
           <!-- Global site tag (gtag.js) - Google Analytics -->
-          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115454354-1"></script>
+          <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-115454354-1"></script>
           <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
@@ -73,11 +74,9 @@
   Contact Form<br></a>
 
 
-<br><br><img src="Images/WebsiteLineBreak.png"><br><br><br>
+<br><br><img src="Images/WebsiteLineBreak.png"></div><div class="container">Test<br><br>
 <p style="font-size: small;">
 iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. and other countries. App Store is a service mark of Apple, Inc. Android is a trademark of Google Inc.</p>
 </div>
 <br>
-
-
 </body></html>
