--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   Contact Form<br></a>
 
 
-<br><br><img src="Images/WebsiteLineBreak.png"></div><div class="container">Test<br><br>
+<br><br><img src="Images/WebsiteLineBreak.png"></div><div class="container"><br><br>
 <p style="font-size: small;">
 iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. and other countries. App Store is a service mark of Apple, Inc. Android is a trademark of Google Inc.</p>
 </div>
