Updated on launch
Updated on launch

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             gtag('config', 'UA-115454354-1');
           </script>
-          
+
         </head>
         <body>
           <br><br><br>
@@ -44,9 +44,9 @@
   Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth.</p><p><br><br></p>
 <h1>CURRENT PROJECTS<img src="Images/WebsiteLineBreak.png"></h1>
           <div align="center"> </div>
-<br>The current project being lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
+<br>The first project lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
 <h1></h1>
-          <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank"><img src="Images/HangLinePromoShot.png" alt="Hang Line" onload="this.width/=2;this.onload=null;" title="Hang Line"></a>
+          <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank"><img src="Images/MarkettingImageWithLogo.jpg" alt="Hang Line" onload="this.width/=2;this.onload=null;" title="Hang Line"></a>
           </div>
 <div class="container"> <br><br>Hang Line is an extreme-physics
             climbing game where you swing up dangerous mountain peaks and avoid
@@ -57,13 +57,16 @@
 <div class="container"><br>
 
 <p>
-          Coming soon for iPhone®, iPad® and Android®.</p>
+          Avaialable now for iPhone®, iPad® and Android®.</p>
+
+          <a href="https://itunes.apple.com/us/app/hang-line-mountain-climber/id1372005090" target="_blank"><img src="Images/BadgeDownloadOnTheAppStore.png" alt="Download on App Store" onload="this.width/=2;this.onload=null;"></a><a href="https://play.google.com/store/apps/details?id=com.yodo1.hanglinerescue" target="_blank"><img src="Images/BadgetDownloadOnGooglePlay.png" alt="Download on Google Play" onload="this.width/=2;this.onload=null;"></a>
+
           <br><br>
         </div>
 <div class="container">
 <h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
 <h3><br>ED KAY - FOUNDER</h3><img src="Images/ProfileImage.png"></div>
-<div class="container"><br>A 15 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape the constant loop of shipping and layoffs that plagues AAA console development. And thus DinoBoss was born.</div>
+<div class="container"><br>A 17 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape the constant loop of shipping and layoffs that plagues AAA console development. And thus DinoBoss was born.</div>
 <div class="container"><br>
 <h3>FOLLOW</h3>
 <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
