First version of viragon site

--- a/viragon/index.html
+++ b/viragon/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html dir="ltr" lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8">
 
+
           <meta name="msvalidate.01" content="3D472DB5EFBF972E5881224D2410BDEE">
-          <title>DinoBoss - Extreme video game development</title>
-          <link href="MainStyle.css" rel="stylesheet" type="text/css">
+          <title>Viragon - a mutating mass of angry viral triangles</title>
+          <link href="StyleViragon.css" rel="stylesheet" type="text/css">
           <meta content="Ed Kay" name="author">
-          <meta content="DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains." name="description">
-          <meta content="dino boss, dinoboss, hang line, hangline, line hang, climbing game, mountain climbing, grapple game, swinging, grappling hook, mountain, action game, mobile game, puzzle game, goats, avalanches, falling rocks, physics game, iPhone game, Android game" name="keywords">
+          <meta content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move." name="description">
+          <meta content="retro, twin stick shooter, PC game, emergent gameplay, top down shooter, retro arcade, virus, viral, low poly, stylized, dino boss, dinoboss" name="keywords">
           <!-- FB -->
-          <meta property="og:title" content="DinoBoss">
+          <meta property="og:title" content="Viragon">
           <meta property="og:type" content="website">
-          <meta property="og:image" content="http://www.dinoboss.com/Images/HangLinePromoShot.png">
-          <meta property="og:url" content="http://www.dinoboss.com">
-          <meta property="og:description" content="DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.">
+          <meta property="og:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
+          <meta property="og:url" content="http://www.dinoboss.com/viragon">
+          <meta property="og:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
           <!-- TWITTER -->
           <meta name="twitter:card" content="summary">
-          <meta name="twitter:url" content="http://www.dinoboss.com">
-          <meta name="twitter:title" content="DinoBoss">
-          <meta name="twitter:description" content="DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.">
-          <meta name="twitter:image" content="http://www.dinoboss.com/Images/HangLinePromoShot.png">
+          <meta name="twitter:url" content="http://www.dinoboss.com/viragon">
+          <meta name="twitter:title" content="Viragon">
+          <meta name="twitter:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
+          <meta name="twitter:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
 
-          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <!-- Needs updating!!!!
+          Global site tag (gtag.js) - Google Analytics
           <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-115454354-1"></script>
           <script>
             window.dataLayer = window.dataLayer || [];
@@ -28,38 +30,27 @@
 
             gtag('config', 'UA-115454354-1');
           </script>
-
+          -->
         </head>
         <body>
-          <br><br><br>
-          <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br><br>
-
-            <div class="container">
-          <h1>EXTREME VIDEO GAME DEVELOPMENT<img src="Images/WebsiteLineBreak.png"></h1>
-<p>
-
-  <br>Viragon</p><p><br><br></p>
-<h1>CURRENT PROJECTS<img src="Images/WebsiteLineBreak.png"></h1>
-<br>The first project lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
-
-<p>
-<div class="container">
-<h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
-<h3><br>ED KAY - FOUNDER</h3><img src="Images/ProfileImage.png"></div>
-<div class="container"><br>A 17 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape the constant loop of shipping and layoffs that plagues AAA console development. And thus DinoBoss was born.</div>
-<div class="container"><br>
-<h3>FOLLOW</h3>
-<a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
-<img style="width: 64px; height: 64px;" alt="Ed on twitter" src="Images/twitter-128.png"></a>
+          <div class='section content'>
+            <div class='illustration'>
+              <img src='Images/LogoAndBackground.jpg' style='max-width: 1264px'/>
+            </div>
+          </div>
 <br><br>
-<h3>GET IN TOUCH</h3>
-<a target="_blank" title="Get in touch" href="http://www.hanglinegame.com/Contact.html">
-  Contact Form<br></a>
-
-
-<br><br><img src="Images/WebsiteLineBreak.png"></div><div class="container"><br><br>
-<p style="font-size: small;">
-iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. and other countries. App Store is a service mark of Apple, Inc. Android is a trademark of Google Inc.</p>
-</div>
+<div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.</div><div class="container"><br></div><div class="container"><br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.</div><div class="container"><br>
+<h3>ORIGINS</h3>Viragon was first conceived at Pirate Jam 2019 as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to create emergent gameplay, and a creature that felt alive.<br><br>
+<div class="container"><h3>EVOLUTION</h3><p>
+Viragon is constantly evolving.<br>
 <br>
-</body></html>
+To keep up to date with progress, follow me on twitter:</p><br>
+<a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
+<img style="width: 64px; height: 64px;" alt="Ed on twitter" src="../Images/twitter-128.png"></a>
+<br><br>
+
+
+</div><div class="container"><br></div>
+<br>
+
+</div></body></html>
