--- a/viragon/index.html
+++ b/viragon/index.html
@@ -1,54 +1,54 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html dir="ltr" lang="en"><head><meta http-equiv="content-type" content="text/html; charset=utf-8">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html dir="ltr" lang="en">    <head>        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+        <title>Viragon - a mutating mass of angry viral triangles</title>
+        <link href="StyleViragon.css" rel="stylesheet" type="text/css">
+        <meta content="Ed Kay" name="author">
+        <meta content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move." name="description">
+        <meta content="retro, twin stick shooter, PC game, emergent gameplay, top down shooter, retro arcade, virus, viral, low poly, stylized, dino boss, dinoboss" name="keywords">
+        <!-- FB -->
+        <meta property="og:title" content="Viragon">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
+        <meta property="og:url" content="http://www.dinoboss.com/viragon">
+        <meta property="og:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
+        <!-- TWITTER -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:url" content="http://www.dinoboss.com/viragon">
+        <meta name="twitter:title" content="Viragon">
+        <meta name="twitter:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
+        <meta name="twitter:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
 
-          <title>Viragon - a mutating mass of angry viral triangles</title>
-          <link href="StyleViragon.css" rel="stylesheet" type="text/css">
-          <meta content="Ed Kay" name="author">
-          <meta content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move." name="description">
-          <meta content="retro, twin stick shooter, PC game, emergent gameplay, top down shooter, retro arcade, virus, viral, low poly, stylized, dino boss, dinoboss" name="keywords">
-          <!-- FB -->
-          <meta property="og:title" content="Viragon">
-          <meta property="og:type" content="website">
-          <meta property="og:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
-          <meta property="og:url" content="http://www.dinoboss.com/viragon">
-          <meta property="og:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
-          <!-- TWITTER -->
-          <meta name="twitter:card" content="summary">
-          <meta name="twitter:url" content="http://www.dinoboss.com/viragon">
-          <meta name="twitter:title" content="Viragon">
-          <meta name="twitter:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
-          <meta name="twitter:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
+        <!-- Needs updating!!!!
+        Global site tag (gtag.js) - Google Analytics
+        <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-115454354-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-          <!-- Needs updating!!!!
-          Global site tag (gtag.js) - Google Analytics
-          <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-115454354-1"></script>
-          <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-115454354-1');
-          </script>
-          -->
-        </head>
-        <body>
-          <div class='section content'>
-            <div class='illustration'>
-              <img src='Images/LogoAndBackground.jpg' style='max-width: 1264px'/>
-            </div>
+          gtag('config', 'UA-115454354-1');
+        </script>
+        -->
+      </head>
+      <body>
+          <div class='LogoAndBackground'>
+            <img src='Images/LogoAndBackground.jpg' style='max-width: 1264px'/>
           </div>
-<br><br>
-<div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.</div><div class="container"><br></div><div class="container"><br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.</div><div class="container"><br>
-<h3>ORIGINS</h3>Viragon was first conceived at Pirate Jam 2019 as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to create emergent gameplay, and a creature that felt alive.<br><br>
-<div class="container"><h3>EVOLUTION</h3><p>
-Viragon is constantly evolving.<br>
-<br>
-To keep up to date with progress, follow me on twitter:</p><br>
-<a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
-<img style="width: 64px; height: 64px;" alt="Ed on twitter" src="../Images/twitter-128.png"></a>
-<br><br>
-
-
-</div><div class="container"><br></div>
-<br>
-
-</div></body></html>
+          <br>
+            <div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.
+            <br>            <br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.            <br><br>            <h3>ORIGINS</h3>Viragon was first conceived at Pirate Jam 2019 as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to create emergent gameplay, and a creature that felt alive.<br><br>
+            <h3>EVOLUTION</h3>            <p>
+              Viragon is constantly evolving.
+              <br>
+              <br>
+              To keep up to date with progress, follow me on twitter:
+            </p>
+            <br>
+            <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
+            <img style="width: 64px; height: 64px;" alt="Ed on twitter" src="../Images/twitter-128.png"></a>
+            <br>
+            <br>
+            <br>
+            <br>
+            </div>
+      </body>
+</html>
