low and high res images

--- a/viragon/index.html
+++ b/viragon/index.html
@@ -31,7 +31,10 @@
       </head>
       <body>
           <div class='LogoAndBackground'>
-            <img src='Images/LogoAndBackground.jpg' style='max-width: 1264px'/>
+            <img src='Images/LogoAndBackground_LR.jpg'
+                 srcset='Images/LogoAndBackground_LR.jpg 1x,
+                         Images/LogoAndBackground_HR.jpg 2x'
+                 style='max-width: 1264px'/>
           </div>
           <br>
             <div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.
