--- a/viragon/index.html
+++ b/viragon/index.html
@@ -30,11 +30,20 @@
         -->
       </head>
       <body>
+        <!--
           <div class='LogoAndBackground'>
             <img src='Images/LogoAndBackground_LR.jpg'
                  srcset='Images/LogoAndBackground_LR.jpg 1x,
                          Images/LogoAndBackground_HR.jpg 2x'
                  style='max-width: 1264px'/>
+          </div>
+            -->
+          <div class='photo'>
+            <img src='images/photo-small.jpg'
+                 srcset='Images/LogoAndBackground_LR.jpg 1264w,
+                         Images/LogoAndBackground_HR.jpg 2528w'
+                 sizes='(min-width: 1264px) 1264px,
+                        100vw'/>
           </div>
           <br>
             <div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.
