--- a/viragon/index.html
+++ b/viragon/index.html
@@ -30,6 +30,10 @@
         -->
       </head>
       <body>
+          <style>
+            a { color: #FFE270; } /* CSS link color */
+            a:hover { color: #FF9848; } /* CSS link hover */
+          </style>
         <!--
           <div class='LogoAndBackground'>
             <img src='Images/LogoAndBackground_LR.jpg'
@@ -47,7 +51,7 @@
           </div>
           <br>
             <div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.
-            <br>            <br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.            <br><br>            <h3>ORIGINS</h3>Viragon was first conceived at Pirate Jam 2019 as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to create emergent gameplay, and a creature that felt alive.<br><br>
+            <br>            <br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.            <br><br>            <h3>ORIGINS</h3>Viragon was first conceived at <a href="https://www.pirate-jam.com/pirate-jam-2019" title="Pirate Jam 2019" target="_blank">Pirate Jam 2019</a> as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to create emergent gameplay, and a creature that felt alive.<br><br>
             <h3>EVOLUTION</h3>            <p>
               Viragon is constantly evolving.
               <br>
