--- a/viragon/index.html
+++ b/viragon/index.html
@@ -34,14 +34,7 @@
             a { color: #FFE270; } /* CSS link color */
             a:hover { color: #FF9848; } /* CSS link hover */
           </style>
-        <!--
-          <div class='LogoAndBackground'>
-            <img src='Images/LogoAndBackground_LR.jpg'
-                 srcset='Images/LogoAndBackground_LR.jpg 1x,
-                         Images/LogoAndBackground_HR.jpg 2x'
-                 style='max-width: 1264px'/>
-          </div>
-            -->
+          <!--
           <div class='photo'>
             <img src='images/photo-small.jpg'
                  srcset='Images/LogoAndBackground_LR.jpg 1264w,
@@ -49,7 +42,16 @@
                  sizes='(min-width: 1264px) 1264px,
                         140vw'/>
           </div>
-          <br>
+            -->
+            <div class='image-logo'>
+              <img class="displayed" src='images/photo-small.jpg'
+                   srcset='Images/LogoAndBackground_LR.jpg 1264w,
+                           Images/LogoAndBackground_HR.jpg 1528w'
+                   sizes='(min-width: 1264px) 1264px,
+                          140vw'/>
+            </div>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br>
             <div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.
             <br>            <br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.            <br><br>            <h3>ORIGINS</h3>Viragon was first conceived at <a href="https://www.pirate-jam.com/pirate-jam-2019" title="Pirate Jam 2019" target="_blank">Pirate Jam 2019</a> as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to create emergent gameplay, and a creature that felt alive.<br><br>
             <h3>EVOLUTION</h3>            <p>
