--- a/viragon/index.html
+++ b/viragon/index.html
@@ -44,11 +44,11 @@
           </div>
             -->
             <div class='image-logo'>
-              <img class="displayed" src='images/photo-small.jpg'
+              <img src='images/photo-small.jpg'
                    srcset='Images/LogoAndBackground_LR.jpg 1264w,
-                           Images/LogoAndBackground_HR.jpg 1528w'
+                           Images/LogoAndBackground_HR.jpg 2528w'
                    sizes='(min-width: 1264px) 1264px,
-                          140vw'/>
+                          130vw'/>
             </div>
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br>
