Added newsletter signup
Added newsletter signup

--- a/index.html
+++ b/index.html
@@ -66,12 +66,14 @@
 <div class="container">
 <h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
 <h3><br>ED KAY - FOUNDER</h3><img src="Images/ProfileImage.png"></div>
-<div class="container"><br>A 17 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape the constant loop of shipping and layoffs that plagues AAA console development. And thus DinoBoss was born.</div>
+<div class="container"><br>A 17 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape AAA console development and enter the terrifying world of indie development. And thus DinoBoss was born.</div>
 <div class="container"><br>
 <h3>FOLLOW</h3>
 <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
 <img style="width: 64px; height: 64px;" alt="Ed on twitter" src="Images/twitter-128.png"></a>
 <br><br>
+<a target="" title="Sign up to Newsletter" href="Newsletter.html">Sign up to Newsletter<br></a>
+<br>
 <h3>GET IN TOUCH</h3>
 <a target="_blank" title="Get in touch" href="http://www.hanglinegame.com/Contact.html">
   Contact Form<br></a>
