fix to broken link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
 <img style="width: 64px; height: 64px;" alt="Ed on twitter" src="Images/twitter-128.png"></a>
 <br><br>
-<a target="" title="Sign up to Newsletter" href="Newsletter.html">Sign up to Newsletter<br></a>
+<a target="_top" title="Sign up to Newsletter" href="newsletter.html">Sign up to Newsletter<br></a>
 <br>
 <h3>GET IN TOUCH</h3>
 <a target="_blank" title="Get in touch" href="http://www.hanglinegame.com/Contact.html">
