tweaks to contact form links on website

--- a/viragon/index.html
+++ b/viragon/index.html
@@ -57,7 +57,11 @@
               Viragon is constantly evolving.
               <br>
               <br>
-              To keep up to date with progress, follow me on twitter:
+              To keep up to date with progress, you can sign up to the newsletter:
+              <br><br>
+              <a target="_top" title="Sign up to Newsletter" href="../newsletter.html">Newsletter<br></a>
+              <br>
+              Or follow me on twitter:
             </p>
             <br>
             <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
