Removing uncessesary images

--- a/viragon/index.html
+++ b/viragon/index.html
@@ -57,7 +57,7 @@
               Viragon is constantly evolving.
               <br>
               <br>
-              To keep up to date with progress, you can sign up to the newsletter:
+              To keep up to date with progress, you can sign up to my newsletter:
               <br><br>
               <a target="_top" title="Sign up to Newsletter" href="../newsletter.html">Newsletter<br></a>
               <br>
