--- a/demonspore/index.html
+++ b/demonspore/index.html
@@ -28,6 +28,11 @@
           gtag('config', 'UA-115454354-1');
         </script>
         -->
+
+<script>
+window.location.replace("http://www.demonspore.com/");
+</script>
+
       </head>
       <body>
           <style>
